--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
         </section>
         <!-- Feature Bar-->
-        <section class="feature">
+        <section class="features">
             <div class="feature">
                 <img src="images/mainmeal.jpg" alt="mainmeal">
                 <div class="feature_info">
@@ -62,7 +62,7 @@
             </div>
             <div class="feature">
                 <div class="feature_info">
-                    <p class="feature_top">More</p>
+                    <p class="feature_more">More</p>
                 </div>
             </div>
         </section>
