--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="descrtption" content="profile">
     <title>FoodHunt</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="script" href="app.js">
 </head>
 <body>
     <main>
@@ -17,52 +18,77 @@
                 <div class="links">
                     <a href="#">About</a>
                     <a href="#">Docs</a>
-                    <button class="button_med" href="#">Login</button>
+                    <a href="login.html">
+                        <button class="button_med">Login</button>
+                    </a>
                 </div>
             </nav>
         </header>
         <!-- Contents -->
         <section class="info">
-                <h1 class="content_font1">Food Collection Community</h1>
+                <h1 class="content_font1">Food Lover Station</h1>
                 <h4 class="content_font2">by Ball Suphachai</h4>
                 <div class="icons">
                     <div class="icon">
-                        <img src="images/email.svg" alt="email">
+                        <a href="">
+                            <img src="images/email.svg" alt="email">
                         <p class="icon_info">mo055632136@gmail.com</p>
+                        </a>
+                        
                     </div>
                     <div class="icon">
-                        <img src="images/facebook.svg" alt="email">
-                        <p class="icon_info">Suphachai Saoban</p>
+                        <a href="https://www.facebook.com/suphachai.saoban">
+                            <img src="images/facebook.svg" alt="email">
+                            <p class="icon_info">Suphachai Saoban</p>
+                        </a>                    
                     </div>
                     <div class="icon">
-                        <img src="images/youtube.svg" alt="email">
-                        <p class="icon_info">Ballichi</p>
+                        <a href="https://www.youtube.com/@Ballichi">
+                            <img src="images/youtube.svg" alt="email">
+                            <p class="icon_info">Ballichi</p>
+                        </a>
                     </div>
                     <div class="icon">
-                        <img src="images/twitter.svg" alt="email">
-                        <p class="icon_info">@SuphachaiBall1</p>
+                        <a href="https://x.com/SuphachaiBall1">
+                            <img src="images/twitter.svg" alt="email">
+                            <p class="icon_info">@SuphachaiBall1</p>
+                        </a>
                     </div>     
                 </div>
         </section>
         <!-- Feature Bar-->
         <section class="features">
             <div class="feature">
-                <img src="images/mainmeal.jpg" alt="mainmeal">
+                <a href="mainMenu.html">
+                    <img src="images/mainmeal.jpg" alt="mainmeal">
+                </a>
                 <div class="feature_info">
-                    <p class="feature_top">Main menu</p>
+                    <a href="mainMenu.html">
+                        <p class="feature_top">Main menu</p>
+                    </a>                                        
                     <p class="feature_bottom">Enjoy your Breakfast Lunch and Dinner</p>
                 </div>
             </div>
             <div class="feature">
-                <img src="images/dessert.jpg" alt="dessert">
+                <a href="dessert.html">
+                    <img src="images/dessert.jpg" alt="dessert">
+                </a>
                 <div class="feature_info">
-                    <p class="feature_top">Dessert</p>
+                    <a href="dessert.html">
+                        <p class="feature_top">Dessert</p>
+                    </a>
                     <p class="feature_bottom">Sweet dishes</p>
                 </div>
             </div>
             <div class="feature">
-                <div class="feature_info">
-                    <p class="feature_more">More</p>
+                <a href="" >
+                    <img src="/images/more.jpg" alt="More">
+                </a>
+                <div class="feature_info" alt="more">
+                    <a href="">
+                        <p class="feature_more">More</p>
+                    </a>
+                    
                 </div>
             </div>
         </section>
